--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,18 @@
-//
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
+@keyframes slide {
+    100% { top: 30px; }
+}
+@media screen and (max-width: 668px) {
+    .alert{ /* center the alert on small screens */
+        left: 10px;
+        right: 10px;
+    }
+}
